--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,15 @@
   "manifest_version": 3,
   "name": "Qorkscrew",
   "description": "Assists in debugging unqork applications.",
-  "version": "1.1",
+  "version": "1.2",
   "action": {
     "default_icon": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
-    }
+    },
+    "default_popup": "menu.html"
   },
   "icons": {
     "16": "images/icon-16.png",
@@ -21,7 +22,7 @@
     "page": "options.html",
     "open_in_tab": false
   },
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["activeTab", "tabs", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   }
